# payla

./: Dockerfile  README.md  pyproject.toml
app/core/migrations/: 0001_initial.py
app/newsletter/: admin.py  apps.py  errors.py  models.py  serializers.py  signals.py  urls.py
app/newsletter/api/: __init__.py  subscription.py  unsubscription.py
app/newsletter/management/commands/: cleanup.py  sendnewsletter.py
app/newsletter/migrations/: 0001_initial.py  0002_auto_20220914_2253.py  0003_alter_subscriptionattempt_id.py  0004_auto_20220916_1846.py  0005_client_user.py  0006_remove_subscriptionattempt_succeed_at.py  0007_subscriptionattempt_confirmed_at.py  0008_alter_client_subscribed.py  0009_alter_subscriptionattempt_valid_from.py  0010_unsubscriptionattempt.py
app/newsletter/models/: __init__.py  client.py  subscription.py  transaction.py
app/newsletter/services/: email.py  secret_generator.py  subscription.py  transaction.py  unsubscription.py
app/newsletter/templates/newsletter/: newsletter.txt  subscription_confirm.txt  unsubscription_confirm.txt
app/server/: settings.py  urls.py
tests/app/: conftest.py
tests/app/test_newsletter/: test_signals.py
tests/app/test_newsletter/test_api/: test_subscription.py  test_unsubscription.py
tests/app/test_newsletter/test_commands/: test_cleanup.py  test_sendnewsletter.py
tests/app/test_newsletter/test_services/: test_email.py  test_subscription.py  test_transaction.py  test_unsubscription.py
